// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Verse block inserts block 1`] = `
"<!-- fp:verse -->
<pre class="fp-block-verse"></pre>
<!-- /fp:verse -->"
`;

exports[`Verse block renders block text set as initial content 1`] = `
"<!-- fp:verse -->
<pre class="fp-block-verse">Sample text</pre>
<!-- /fp:verse -->"
`;
